--- a/index.html
+++ b/index.html
@@ -1,89 +1,44 @@
 <!DOCTYPE html>
-<html lang="uz">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Muhammadali Prodaction</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #111;
-      color: #fff;
+      background-image: url('https://images.alphacoders.com/109/1098156.jpg');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      color: white;
+      font-family: 'Arial', sans-serif;
       text-align: center;
-      padding: 20px;
+      padding: 50px;
     }
+
     h1 {
-      color: #00ffcc;
-      margin-top: 50px;
-    }
-    a.button {
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 20px;
+      border-radius: 12px;
       display: inline-block;
-      margin: 10px;
-      padding: 12px 20px;
-      background-color: #00ccff;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 8px;
-      font-size: 16px;
     }
-    p {
-      margin-top: 30px;
-      color: #aaa;
+
+    a {
+      color: #00ffcc;
+      text-decoration: none;
+      font-size: 18px;
+      display: block;
+      margin-top: 15px;
+    }
+
+    a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-
-  <h1>Muhammadali Prodaction</h1>
-
-  <a class="button" href="https://t.me/MuhammadaliProdaction" target="_blank">Telegram</a>
-  <a class="button" href="https://youtube.com/@masterprouzb?si=4laXlohQrgeEHNaZ" target="_blank">YouTube</a>
-
-  <p>&copy; 2025 MuhammadaliProdaction.com</p>
-
-</body>
-</html><!DOCTYPE html>
-<html lang="uz">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Muhammadali Prodaction</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #111;
-      color: #fff;
-      text-align: center;
-      padding: 20px;
-    }
-    h1 {
-      color: #00ffcc;
-      margin-top: 50px;
-    }
-    a.button {
-      display: inline-block;
-      margin: 10px;
-      padding: 12px 20px;
-      background-color: #00ccff;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 8px;
-      font-size: 16px;
-    }
-    p {
-      margin-top: 30px;
-      color: #aaa;
-    }
-  </style>
-</head>
-<body>
-
-  <h1>Muhammadali Prodaction</h1>
-
-  <a class="button" href="https://t.me/MuhammadaliProdaction" target="_blank">Telegram</a>
-  <a class="button" href="https://youtube.com/@masterprouzb?si=4laXlohQrgeEHNaZ" target="_blank">YouTube</a>
-
-  <p>&copy; 2025 MuhammadaliProdaction.com</p>
-
+  <h1>Muhammadali Prodaction Minecraft Edition!</h1>
+  <p>YouTube va Telegram sahifalarimiz:</p>
+  <a href="https://youtube.com/@masterprouzb" target="_blank">YouTube kanalimiz</a>
+  <a href="https://t.me/MuhammadaliProdaction" target="_blank">Telegram kanalimiz</a>
 </body>
 </html>
