--- a/index.html
+++ b/index.html
@@ -1,4 +1,28 @@
 <!DOCTYPE html>
+<html>
+<head>
+  <title>Foydalanuvchi formasi</title>
+</head>
+<body style="font-family: sans-serif; padding: 20px;">
+
+  <h1>Ro‘yxatdan o‘tish formasi</h1>
+
+  <form>
+    <label>Ismingiz:</label><br>
+    <input type="text" placeholder="Ism"><br><br>
+
+    <label>Email:</label><br>
+    <input type="email" placeholder="Email"><br><br>
+
+    <label>Parol:</label><br>
+    <input type="password" placeholder="Parol"><br><br>
+
+    <input type="submit" value="Yuborish">
+  </form>
+
+</body>
+</html>
+
 <html lang="uz">
 <head>
   <meta charset="UTF-8">
